--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .DS_Store
 **/test_results/**
+**/__pycache__/**
+resources/images/ping_image/ping_stats.csv
+resources/images/ping_image/hosts.txt
+resources/images/ping_image/bandwidth_test_config.json
