refactoring, bandwidth tests are almost complete, still need to write script to extract results from containers

--- a/resources/images/ping_image/Dockerfile
+++ b/resources/images/ping_image/Dockerfile
@@ -4,13 +4,16 @@ FROM python:3.7-alpine
 RUN apk update
 RUN apk add curl
 RUN apk add iputils
-RUN apk add iperf
+RUN apk add iperf3
 
 RUN mkdir /code
 WORKDIR /code
 ADD requirements.txt /code/
-ADD run_pings.py /code/
+ADD bandwidth_src /code/bandwidth_src
+ADD ping_src /code/ping_src
+ADD utils /code/utils
+ADD main.py /code/
 RUN pip install -r requirements.txt
 EXPOSE 8000
 
-CMD ["python", "run_pings.py"]
+CMD ["python", "main.py"]
